--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
----
-Landing Page
----
-Welcome User
-
-Thankyou for taking the time to visit the agents model repository.
-
-Once inside please open and study the README file before carrying out any other action.
-
-The repository may be accessed <a href="https://github.com/StudID-201465981/GEOG5003_Ass1_2022_201465981.github.io">here</a>, or via the tab at the top of the page. Have fun.
+<HTML>
+<TITLE>
+Test
+</TITLE>
+<BODY>
+Hello world
+</BODY>
+</HTML>
